--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://ahmedhussam636.github.io/BrainWave",
+  "homepage": "https://github.com/ahmedhussam636/BrainWave.git",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
